--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -7,6 +7,14 @@
     <groupId>servlet</groupId>
     <artifactId>servlet</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
