--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -21,6 +21,11 @@
             <version>4.12</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-dbcp</artifactId>
+            <version>7.0.47</version>
+        </dependency>
 
     </dependencies>
 
