--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>tomcat-dbcp</artifactId>
             <version>7.0.47</version>
         </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
 
     </dependencies>
 
