--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>commons-dbutils</artifactId>
             <version>1.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.24</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
