--- a/autoLoginTest/pom.xml
+++ b/autoLoginTest/pom.xml
@@ -24,6 +24,11 @@
             <version>1.2.49</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
+        </dependency>
     </dependencies>
 
 
