--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -50,7 +50,12 @@
             <artifactId>activation</artifactId>
             <version>1.1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
