--- a/springIOC/pom.xml
+++ b/springIOC/pom.xml
@@ -28,6 +28,11 @@
             <version>5.0.8.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
     </dependencies>
 
