--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -49,6 +49,24 @@
             <version>5.0.8.RELEASE</version>
         </dependency>
 
+
+        <!--
+         datasource
+        -->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
+
+
     </dependencies>
 
 
