--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.1</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
