--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -36,6 +36,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+        </dependency>
 
 
     </dependencies>
