--- a/mybatis/src/main/resources/mybatis-conf.properties
+++ b/mybatis/src/main/resources/mybatis-conf.properties
@@ -1,4 +1,4 @@
-jdbc.driverClass=com.mysql.cj.jdbc.Driver
+jdbc.Driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql:///store_40?useSSL=false
 jdbc.username=root
 jdbc.password=123456
