--- a/mybatisSpring/pom.xml
+++ b/mybatisSpring/pom.xml
@@ -80,6 +80,11 @@
             <version>2.3.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 
 </project>
