--- a/springMVC/pom.xml
+++ b/springMVC/pom.xml
@@ -16,6 +16,12 @@
             <version>5.1.1.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
