--- a/springMVC/web/WEB-INF/web.xml
+++ b/springMVC/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
     <servlet>
         <servlet-name>spring-mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring-context.xml</param-value>
+        </init-param>
     </servlet>
 
     <servlet-mapping>
