--- a/springmvcMybatis/pom.xml
+++ b/springmvcMybatis/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.51</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
